gitops/apps/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: devops-project
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
      protocol: TCP
